--- a/reveal.js-master/index.html
+++ b/reveal.js-master/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-        <section  data-markdown="../slides.md"
+        <section  data-markdown="../../slides.md"
                   data-separator="---"
                   data-separator-vertical="-v-"
                   data-separator-notes="^Note:"
