trying to fix issue with loading .md file

--- a/reveal.js-master/index.html
+++ b/reveal.js-master/index.html
@@ -16,11 +16,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-        <section  data-markdown="../../slides.md"
+        <section  data-markdown="../../slides.md/"
                   data-separator="---"
                   data-separator-vertical="-v-"
                   data-separator-notes="^Note:"
-                  data-charset="iso-8859-15"
         </section>
 			</div>
 		</div>
