--- a/reveal.js/index.html
+++ b/reveal.js/index.html
@@ -16,8 +16,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+        <section data-markdown="slides.md" data-separator="---" data-separator-vertical="-v-" data-charset="iso-8859-15"></section>
 			</div>
 		</div>
 
